@@ -40,7 +40,7 @@
         <maven-javadoc-plugin.version>3.7.0</maven-javadoc-plugin.version>
 
         <!-- Java version -->
-        <java.version>8</java.version>
+        <java.version>11</java.version>
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <maven.compiler.source>${java.version}</maven.compiler.source>
 
@@ -391,6 +391,15 @@
                 </executions>
                 <configuration>
                     <source>8</source>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>21</source>
+                    <target>21</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
